--- a/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
@@ -1149,4 +1149,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="phone">PHONE</string>
     <string name="not_working">Not Working</string>
     <string name="working">Working</string>
+
+    <string name="voise_post_group">আপনার নিজস্ব স্বর ব্যবহার করুন\nআপনার নিজস্ব স্বরে প্রশ্ন করুন বা আপনার ভাবনা রেকর্ড করে জানান</string>
+    <string name="poll_post_group">Create a poll\nGet community’s opinion on what matters to you</string>
+    <string name="blog_post_group">এখানে লিখুন\nআপনার ভাবনা ভাগ করে নিন বা কোনো প্রশ্ন থাকলে করুন </string>
 </resources>
