--- a/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
@@ -1193,5 +1193,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="not_working">Not Working</string>
     <string name="working">Working</string>
 
-
+    <string name="voise_post_group">Use your voice\nRecord your thoughts or ask a question in your voice</string>
+    <string name="poll_post_group">Create a poll\nGet community’s opinion on what matters to you</string>
+    <string name="blog_post_group">Write something\nAsk a question or share your thought</string>
 </resources>
