--- a/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
@@ -1230,5 +1230,9 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="voise_post_group">Use your voice\nRecord your thoughts or ask a question in your voice</string>
     <string name="poll_post_group">Create a poll\nGet community’s opinion on what matters to you</string>
     <string name="blog_post_group">Write something\nAsk a question or share your thought</string>
+
+    <string name="mom_vlog_banner_title">Mom Vlogs challenge</string>
+    <string name="mom_vlog_banner_subtitle">Prizes worth Rs 10,000</string>
+    <string name="mom_vlog_banner_button">Upload Video</string>
 </resources>
 
