Change Language Banner text

--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -1158,7 +1158,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="poll_post_group">Create a poll\nGet community’s opinion on what matters to you</string>
     <string name="blog_post_group">Write something\nAsk a question or share your thought</string>
 
-    <string name="mom_vlog_banner_title">मॉम-वीलॉग चैलेंज अलर्ट</string>
-    <string name="mom_vlog_banner_subtitle">और जीतें 10000 रुपए तक के पुरस्कार</string>
+    <string name="mom_vlog_banner_title">मॉम व्हिलॉग चॅलेंज अलर्ट</string>
+    <string name="mom_vlog_banner_subtitle">जिंका रु. १०,०००/_ ची बक्षिसं</string>
     <string name="mom_vlog_banner_button">वीडियो अपलोड करें</string>
 </resources>
