--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -1156,7 +1156,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="poll_post_group">పోల్ సృష్టించండి\nమీకు ముఖ్యమైన వాటిపై కమ్యూనిటీ అభిప్రాయాన్ని పొందండిu</string>
     <string name="blog_post_group">ఏదైనా రాయండి\nఒక ప్రశ్న అడగండి లేదా మీ ఆలోచనను పంచుకోండి</string>
 
-    <string name="mom_vlog_banner_title">ఈ ఛాలెంజ్ తీసుకోండి అమ్మను</string>
+    <string name="mom_vlog_banner_title">మామ్ వీలాగ్ ఛాలెంజ్ అలర్ట్</string>
     <string name="mom_vlog_banner_subtitle">రూ.10,000 దాకా గెలుచుకోండి</string>
     <string name="mom_vlog_banner_button">వీడియో అప్లోడ్ చేయండి</string>
 </resources>
