--- a/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
@@ -1154,7 +1154,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="poll_post_group">Create a poll\nGet community’s opinion on what matters to you</string>
     <string name="blog_post_group">এখানে লিখুন\nআপনার ভাবনা ভাগ করে নিন বা কোনো প্রশ্ন থাকলে করুন </string>
 
-    <string name="mom_vlog_banner_title">অংশগ্রহণ করুন চ্যালেঞ্জে</string>
+    <string name="mom_vlog_banner_title">এসে গেলো নতুন মম-ভিলগ চ্যালেঞ্জ</string>
     <string name="mom_vlog_banner_subtitle">পুরস্কার মূল্য- ১০,০০০ টাকা</string>
     <string name="mom_vlog_banner_button">ভিডিও আপলোড করুন</string>
 </resources>
