--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -1153,7 +1153,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="poll_post_group">Create a poll\nGet community’s opinion on what matters to you</string>
     <string name="blog_post_group">எதாவது எழுதலாம்\nகேள்வி கேட்கலாம் (அ) உங்கள் எண்ணத்தை பகிரலாம்</string>
 
-    <string name="mom_vlog_banner_title">ஏற்றுக்கொள்ளுங்கள்</string>
-    <string name="mom_vlog_banner_subtitle">10,000/- ரூபாய் மதிப்புள்ள பரிசுகளை வெல்லுங்கள்</string>
+    <string name="mom_vlog_banner_title">மாம் வ்லோக்ஸ் சவால்</string>
+    <string name="mom_vlog_banner_subtitle">10,௦௦௦.ரூ பரிசை வெல்லுங்கள்!</string>
     <string name="mom_vlog_banner_button">வீடியோவை பதிவேற்றுங்கள்</string>
 </resources>
