--- a/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
@@ -1200,4 +1200,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="mom_vlog_banner_title">എടുക്കുക  ചാലഞ്ച</string>
     <string name="mom_vlog_banner_subtitle">10,000 രൂപ വിലമതിക്കുന്ന സമ്മാനങ്ങൾ</string>
     <string name="mom_vlog_banner_button">വീഡിയോ അപ്‌ലോഡുചെയ്യുക</string>
+
+    <string name="join_group">ഗ്രൂപ്പിൽ ചേരൂ</string>
 </resources>
