--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -1156,4 +1156,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="mom_vlog_banner_title">மாம் வ்லோக்ஸ் சவால்</string>
     <string name="mom_vlog_banner_subtitle">10,௦௦௦.ரூ பரிசை வெல்லுங்கள்!</string>
     <string name="mom_vlog_banner_button">வீடியோவை பதிவேற்றுங்கள்</string>
+
+    <string name="join_group">குரூப்பில் இணையவும்</string>
 </resources>
