--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1284,5 +1284,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="mom_vlog_banner_title">Mom Vlogs Challenge Alert</string>
     <string name="mom_vlog_banner_subtitle">Win prizes up to Rs. 10,000</string>
     <string name="mom_vlog_banner_button">Upload Video</string>
+
+    <string name="join_group">Join Group</string>
 </resources>
 
