--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1107,6 +1107,9 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="group_comment_start_type_here_text">Start typing</string>
     <string name="group_comment_be_the_first_text">Be the first one to comment</string>
 
+    //unsupported image
+    <string name="unsupported_image">We are not able to support this image. Please try again with a different one.</string>
+
     //tooltip groups
     <string name="add_text_or_media_group_post_activity_tooltip_text">TRY AUDIO POST</string>
     <string name="audio_post">AUDIO</string>
