payment detail filled when click to edit and all jira

--- a/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
@@ -742,7 +742,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="language_label.telegu">తెలుగు</string>
     <string name="language_label.kannada">ಕನ್ನಡ</string>
     <string name="language_label.malayalam">മലയാളം</string>
-    <string name="language_label.gujrati">ગુજરાતી </string>
+    <string name="language_label.gujarati">ગુજરાતી </string>
     <string name="language_label.punjabi">ਪੰਜਾਬੀ</string>
 
 
