--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -679,7 +679,7 @@
     <string name="author_type.expert">నిపుణులు</string>
     <string name="author_type.featured">ప్రచురితమైన రచయితలు</string>
     <string name="author_type.user">యూజర్</string>
-    <string name="language_label.gujrati">ગુજરાતી </string>
+    <string name="language_label.gujarati">ગુજરાતી </string>
     <string name="cancel">Cancel</string>
     <string name="language_label.punjabi">ਪੰਜਾਬੀ</string>
 
