--- a/MyCity4Kids/MyCity4Kids/res/values-gu/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-gu/strings.xml
@@ -197,7 +197,7 @@
     public static final String LOCALE_TELUGU = "te";
     public static final String LOCALE_KANNADA = "kn";
     public static final String LOCALE_MALAYALAM = "ml";
-    public static final String LOCAL_GUJRATI="gu"
+    public static final String LOCAL_GUJARATI="gu"
 
 
     <string-array name="popup_language_list">
@@ -742,7 +742,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="language_label.telegu">తెలుగు</string>
     <string name="language_label.kannada">ಕನ್ನಡ</string>
     <string name="language_label.malayalam">മലയാളം</string>
-    <string name="language_label.gujrati">ગુજરાતી </string>
+    <string name="language_label.gujarati">ગુજરાતી </string>
     <string name="language_label.punjabi">ਪੰਜਾਬੀ</string>
 
 
