--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -646,7 +646,7 @@
     <string name="language_label.telegu">తెలుగు</string>
     <string name="language_label.kannada">ಕನ್ನಡ</string>
     <string name="language_label.malayalam">മലയാളം</string>
-    <string name="language_label.gujrati">ગુજરાતી </string>
+    <string name="language_label.gujarati">ગુજરાતી </string>
     <string name="language_label.punjabi">ਪੰਜਾਬੀ</string>
 
     <string-array name="popup_language_list">
