--- a/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
@@ -1159,4 +1159,9 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="mom_vlog_banner_button">ভিডিও আপলোড করুন</string>
 
     <string name="join_group">গ্রুপে যোগদান করুন</string>
+    <string name="user_funny_video.edit_title">Edit Title</string>
+    <string name="user_funny_video.vlog_title_hint">Your Vlog Title Here</string>
+    <string name="editor_saving">Saving &#8230;</string>
+    <string name="select_thumbnail">Select a thumbnail for your vlog</string>
+    <string name="audio_delay_msg">Playing your audio might take afew seconds</string>
 </resources>
