--- a/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
@@ -1202,4 +1202,9 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="mom_vlog_banner_button">വീഡിയോ അപ്‌ലോഡുചെയ്യുക</string>
 
     <string name="join_group">ഗ്രൂപ്പിൽ ചേരൂ</string>
+    <string name="user_funny_video.edit_title">Edit Title</string>
+    <string name="user_funny_video.vlog_title_hint">Your Vlog Title Here</string>
+    <string name="editor_saving">Saving &#8230;</string>
+    <string name="select_thumbnail">Select a thumbnail for your vlog</string>
+    <string name="audio_delay_msg">Playing your audio might take afew seconds</string>
 </resources>
