--- a/MyCity4Kids/MyCity4Kids/res/values-gu/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-gu/strings.xml
@@ -1282,10 +1282,14 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="mom_vlog_banner_subtitle">Prizes worth Rs 10,000</string>
     <string name="mom_vlog_banner_button">Upload Video</string>
 
+    //Join group dialog screen
+    <string name="join_dialog_heading">તમારી પ્રથમ પોસ્ટ લખો</string>
+    <string name="join_dialog_ask_question">સવાલ પૂછો અથવા તમારા વિચાર શેયર કરો</string>
+
     <string name="join_group">સમૂહ માં જોડાઓ</string>
-    <string name="user_funny_video.edit_title">Edit Title</string>
-    <string name="user_funny_video.vlog_title_hint">Your Vlog Title Here</string>
-    <string name="editor_saving">Saving &#8230;</string>
-    <string name="select_thumbnail">Select a thumbnail for your vlog</string>
+    <string name="user_funny_video.edit_title">શીર્ષક સંપાદિત કરો</string>
+    <string name="user_funny_video.vlog_title_hint">તમારા વી લોગ નો શીર્ષક અહીં</string>
+    <string name="editor_saving">સેવ કરાય છે &#8230;</string>
+    <string name="select_thumbnail">તમારા વી લોગ માટે થમ્બ નેલ(નાની ઈમેજ) પસંદ કરો</string>
     <string name="audio_delay_msg">Playing your audio might take afew seconds</string>
 </resources>
