--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -1157,10 +1157,14 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="mom_vlog_banner_subtitle">10,௦௦௦.ரூ பரிசை வெல்லுங்கள்!</string>
     <string name="mom_vlog_banner_button">வீடியோவை பதிவேற்றுங்கள்</string>
 
+    //Join group dialog screen
+    <string name="join_dialog_heading">உங்கள் முதல் கட்டுரை எழுதுங்கள்</string>
+    <string name="join_dialog_ask_question">ஒரு கேள்வி கேளுங்கள் அல்லது உங்கள் எண்ணங்களைப் பகிருங்கள்</string>
+
     <string name="join_group">குரூப்பில் இணையவும்</string>
-    <string name="user_funny_video.edit_title">Edit Title</string>
-    <string name="user_funny_video.vlog_title_hint">Your Vlog Title Here</string>
-    <string name="editor_saving">Saving &#8230;</string>
-    <string name="select_thumbnail">Select a thumbnail for your vlog</string>
-    <string name="audio_delay_msg">Playing your audio might take afew seconds</string>
+    <string name="user_funny_video.edit_title">தலைப்பைத் திருத்து</string>
+    <string name="user_funny_video.vlog_title_hint">இங்கே, உங்கள் வ்ளாக் தலைப்பு</string>
+    <string name="editor_saving">சேமிக்கிறது &#8230;</string>
+    <string name="select_thumbnail">உங்கள் வ்ளாகிற்கு தம்ப்நெயிலைத் தேர்வு செய்</string>
+    <string name="audio_delay_msg">உங்கள் ஆடியோ லோட் செய்யப்படும் போது காத்திரு.</string>
 </resources>
