--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -1160,10 +1160,14 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="mom_vlog_banner_subtitle">రూ.10,000 దాకా గెలుచుకోండి</string>
     <string name="mom_vlog_banner_button">వీడియో అప్లోడ్ చేయండి</string>
 
+    //Join group dialog screen
+    <string name="join_dialog_heading">మీ మొదటి పోస్ట్ వ్రాయండి </string>
+    <string name="join_dialog_ask_question">మీ సందేహాన్ని అడగండి మరియు మీ ఆలోచనలు పంచుకోండి</string>
+
     <string name="join_group">గ్రూపులో జాయిన్ అవ్వండి</string>
-    <string name="user_funny_video.edit_title">Edit Title</string>
-    <string name="user_funny_video.vlog_title_hint">Your Vlog Title Here</string>
-    <string name="editor_saving">Saving &#8230;</string>
-    <string name="select_thumbnail">Select a thumbnail for your vlog</string>
-    <string name="audio_delay_msg">Playing your audio might take afew seconds</string>
+    <string name="user_funny_video.edit_title">మీ టైటిల్ ఎడిట్ చేయండి</string>
+    <string name="user_funny_video.vlog_title_hint">మీ వీలాగ్ టైటిల్ ఇక్కడ పోస్ట్ చేయండి</string>
+    <string name="editor_saving">సేవ్ చేయబడుతుంది &#8230;</string>
+    <string name="select_thumbnail">మీ వీలాగ్ కి థంబ్ నైల్ సెలెక్ట్ చేయండి</string>
+    <string name="audio_delay_msg">ఆడియో అప్లోడ్ అవుతుంది. కాసేపు ఆగండి.</string>
 </resources>
