--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1300,6 +1300,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="user_funny_video.vlog_title_hint">Your Vlog Title Here</string>
     <string name="editor_saving">Saving &#8230;</string>
     <string name="select_thumbnail">Select a thumbnail for your vlog</string>
-    <string name="audio_delay_msg">Playing your audio might take afew seconds</string>
+    <string name="audio_delay_msg">Please wait while your audio is loaded.</string>
 </resources>
 
